--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "campusmeetups",
   "version": "1.0.0",
-  "description": "",
+  "description": "CampusMeetups is a web application designed to connect university students based on shared interests, travel plans, and availability.",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -11,6 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "@types/mongodb": "^4.0.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.2",
+    "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
