--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/mongodb": "^4.0.6",
+    "async": "^3.2.6",
+    "chai": "^5.1.2",
+    "chai-http": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mocha": "^10.8.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
+    "q": "^2.0.3",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/chai": "^5.0.1",
     "@types/express": "^5.0.0"
   }
 }
