use cloud db and add get trips by name

--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
 PORT=8080
+
+# LOCAL DB
+# DB_PROTOCOL="mongodb://"
+# DB_USER=cmAdmin
+# DB_PASSWORD=test
+# DB_INFO='@127.0.0.1:3000/campusMeetups'
+
+# CLOUD DB
+DB_PROTOCOL="mongodb+srv://"
 DB_USER=cmAdmin
 DB_PASSWORD=test
-DB_INFO='@127.0.0.1:3000/campusMeetups'
+DB_INFO=@cm-cluster0.kxp8o.mongodb.net/campusMeetups
