--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+# .env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -133,3 +133,4 @@ dist
 *.js
 !populate.js
 !test/*.js
+!angularDist/**/*.js
