--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "campusmeetups",
   "version": "1.0.0",
   "description": "CampusMeetups is a web application designed to connect university students based on shared interests, travel plans, and availability.",
-  "main": "server.js",
+  "main": "AppServer.js",
   "scripts": {
-    "start": "node server.js",
+    "build": "tsc",
+    "start": "node AppServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
